example/lib/src/l10n/errors/app_el.arb
{
  "@@locale": "el",
  "error": "Παρουσιάστηκε σφάλμα",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Παρουσιάστηκε ένα απροσδόκητο σφάλμα",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Η αναφορά σφάλματος στάλθηκε με επιτυχία.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}